--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,12 @@
         <artifactId>spring-test</artifactId>
         <version>5.2.6.RELEASE</version>
     </dependency>
+
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 </project>
